add support for file upload exercises

--- a/src/main/webapp/app/exercises/shared/exercise-scores/exercise-scores.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise-scores/exercise-scores.component.html
@@ -54,7 +54,7 @@
                     class="mr-1"
                 ></jhi-programming-assessment-repo-export>
                 <jhi-exercise-submission-export
-                    *ngIf="exercise.type === ExerciseType.TEXT || exercise.type === ExerciseType.MODELING"
+                    *ngIf="exercise.type === ExerciseType.TEXT || exercise.type === ExerciseType.MODELING || exercise.type == ExerciseType.FILE_UPLOAD"
                     [exerciseId]="exercise.id"
                     [exerciseType]="exercise.type"
                     class="mr-1"
