--- a/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
+++ b/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
@@ -226,7 +226,10 @@
                 {{ 'artemisApp.tutorExerciseDashboard.studentsSubmissions' | translate }}
             </h4>
             <div class="table-responsive" *ngIf="tutorParticipationStatus === TRAINED || tutorParticipationStatus === COMPLETED">
-                <table class="table table-striped exercise-table" *ngIf="(unassessedSubmission && unassessedSubmission?.id > 0) || submissions.length > 0; else noSubmissions">
+                <table
+                    class="table table-striped exercise-table"
+                    *ngIf="(unassessedSubmission && unassessedSubmission?.id > 0) || assessedSubmissions.length > 0; else noSubmissions"
+                >
                     <thead>
                         <tr>
                             <th>#</th>
@@ -239,7 +242,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let submission of submissions; let i = index">
+                        <tr *ngFor="let submission of assessedSubmissions; let i = index">
                             <td>{{ i + 1 }}</td>
                             <td>{{ submission.submissionDate | artemisDate }}</td>
                             <td>
@@ -328,78 +331,64 @@
             </div>
             <!-- Start all assessed submissions only for exam mode -->
             <div *ngIf="!!exercise.exerciseGroup && (tutorParticipationStatus === TRAINED || tutorParticipationStatus === COMPLETED)">
-                <h4 >
-                    {{ 'artemisApp.tutorExerciseDashboard.studentsSubmissions' | translate }}
+                <h4>
+                    Submissions for 2nd review:
                 </h4>
                 <div class="table-responsive">
-                    <table class="table table-striped exercise-table" *ngIf="otherSubmissions.length > 0; else noSubmissions">
+                    <table class="table table-striped exercise-table" *ngIf="otherAssessedSubmissions.length > 0; else noSubmissions">
                         <thead>
-                        <tr>
-                            <th>#</th>
-                            <th>ID</th>
-                            <th>{{ 'artemisApp.tutorExerciseDashboard.submissionDate' | translate }}</th>
-                            <th>{{ 'artemisApp.tutorExerciseDashboard.result' | translate }}</th>
-                            <th>Assessor</th>
-                            <th>{{ 'artemisApp.tutorExerciseDashboard.score' | translate }}</th>
-                            <th *ngIf="exercise.type === ExerciseType.TEXT">{{ 'artemisApp.tutorExerciseDashboard.language' | translate }}</th>
-                            <th>{{ 'artemisApp.tutorExerciseDashboard.action' | translate }}</th>
-                        </tr>
+                            <tr>
+                                <th>#</th>
+                                <th>ID</th>
+                                <th>{{ 'artemisApp.tutorExerciseDashboard.submissionDate' | translate }}</th>
+                                <th>{{ 'artemisApp.tutorExerciseDashboard.result' | translate }}</th>
+                                <th>Assessor</th>
+                                <th>{{ 'artemisApp.tutorExerciseDashboard.score' | translate }}</th>
+                                <th *ngIf="exercise.type === ExerciseType.TEXT">{{ 'artemisApp.tutorExerciseDashboard.language' | translate }}</th>
+                                <th>{{ 'artemisApp.tutorExerciseDashboard.action' | translate }}</th>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr *ngFor="let submission of otherSubmissions; let i = index">
-                            <td>{{ i + 1 }}</td>
-                            <td>{{ submission.id }}</td>
-                            <td>{{ submission.submissionDate | artemisDate }}</td>
-                            <td>
-                                <jhi-result [participation]="submission.participation"></jhi-result>
-                            </td>
-                            <td>
-                                <span *ngIf="submission.result.assessor">{{ submission.result.assessor.name }}</span>
-                            </td>
-                            <td>
-                                <span *ngIf="submission.result !== null && submission.result.score !== null">{{ submission.result.score }} %</span>
-                            </td>
-                            <td *ngIf="exercise.type === ExerciseType.TEXT">
-                                {{ 'artemisApp.tutorExerciseDashboard.languages.' + (submission.language ? submission.language : 'UNKNOWN') | translate }}
-                            </td>
-                            <td>
-                                <ng-container *ngIf="exercise.type !== ExerciseType.PROGRAMMING; else programmingAssessment">
-                                    <button
-                                        *ngIf="submission !== null && calculateStatus(submission) === 'DRAFT'; else continueButton"
-                                        (click)="openAssessmentEditor(submission)"
-                                        class="btn btn-warning btn-sm"
-                                    >
-                                        <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>&nbsp;{{ 'artemisApp.tutorExerciseDashboard.continueAssessment' | translate }}
-                                    </button>
-                                    <ng-template #continueButton>
+                            <tr *ngFor="let submission of otherAssessedSubmissions; let i = index">
+                                <td>{{ i + 1 }}</td>
+                                <td>{{ submission.id }}</td>
+                                <td>{{ submission.submissionDate | artemisDate }}</td>
+                                <td>
+                                    <jhi-result [participation]="submission.participation"></jhi-result>
+                                </td>
+                                <td>
+                                    <span *ngIf="submission.result.assessor">{{ submission.result.assessor.name }}</span>
+                                </td>
+                                <td>
+                                    <span *ngIf="submission.result !== null && submission.result.score !== null">{{ submission.result.score }} %</span>
+                                </td>
+                                <td *ngIf="exercise.type === ExerciseType.TEXT">
+                                    {{ 'artemisApp.tutorExerciseDashboard.languages.' + (submission.language ? submission.language : 'UNKNOWN') | translate }}
+                                </td>
+                                <td>
+                                    <ng-container *ngIf="exercise.type !== ExerciseType.PROGRAMMING; else programmingAssessment">
                                         <button *ngIf="submission !== null && submission.result !== null" (click)="openAssessmentEditor(submission)" class="btn btn-primary btn-sm">
                                             <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>&nbsp;{{ 'artemisApp.tutorExerciseDashboard.openAssessment' | translate }}
                                         </button>
+                                    </ng-container>
+                                    <ng-template #programmingAssessment>
+                                        <jhi-programming-assessment-manual-result
+                                            [participationId]="submission.participation.id"
+                                            [latestResult]="submission.result"
+                                            [exercise]="exercise"
+                                            (onResultModified)="loadAll()"
+                                        ></jhi-programming-assessment-manual-result>
                                     </ng-template>
-                                </ng-container>
-                                <ng-template #programmingAssessment>
-                                    <jhi-programming-assessment-manual-result
-                                        [participationId]="submission.participation.id"
-                                        [latestResult]="submission.result"
-                                        [exercise]="exercise"
-                                        (onResultModified)="loadAll()"
-                                    ></jhi-programming-assessment-manual-result>
-                                </ng-template>
-                            </td>
-                        </tr>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <!-- TODO remove team mode for exam -->
                     <ng-template #noSubmissions>
                         <jhi-assessment-warning [exercise]="exercise"></jhi-assessment-warning>
-                        <div class="alert alert-info" *ngIf="!exercise.teamMode; else teamAssessmentInfo">
+                        <div class="alert alert-info" *ngIf="!exercise.teamMode">
                             {{ 'artemisApp.tutorExerciseDashboard.noSubmissions' | translate }}
                         </div>
-                        <ng-template #teamAssessmentInfo>
-                            <div class="alert alert-warning">
-                                {{ 'artemisApp.tutorExerciseDashboard.startAssessmentFromTeamPages' | translate }}
-                            </div>
-                        </ng-template>
                     </ng-template>
                 </div>
             </div>
