--- a/src/main/webapp/app/assessment/assessment-layout/assessment-layout.component.html
+++ b/src/main/webapp/app/assessment/assessment-layout/assessment-layout.component.html
@@ -8,6 +8,7 @@
     [cancelBusy]="cancelBusy"
     [nextSubmissionBusy]="nextSubmissionBusy"
     [isTeamMode]="isTeamMode"
+    [isExamMode]="isExamMode"
     [isAssessor]="isAssessor"
     [isAtLeastInstructor]="isAtLeastInstructor"
     [canOverride]="canOverride"
