--- a/src/main/webapp/app/exercises/modeling/assess/modeling-assessment-editor/modeling-assessment-editor.component.html
+++ b/src/main/webapp/app/exercises/modeling/assess/modeling-assessment-editor/modeling-assessment-editor.component.html
@@ -4,6 +4,7 @@
     [isLoading]="isLoading"
     [nextSubmissionBusy]="nextSubmissionBusy"
     [isTeamMode]="modelingExercise?.teamMode"
+    [isExamMode]="!!modelingExercise?.exerciseGroup"
     [isAssessor]="isAssessor"
     [isAtLeastInstructor]="isAtLeastInstructor"
     [canOverride]="canOverride"
