--- a/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
@@ -6,6 +6,7 @@
     [cancelBusy]="cancelBusy"
     [nextSubmissionBusy]="nextSubmissionBusy"
     [isTeamMode]="exercise?.teamMode"
+    [isExamMode]="!!exercise?.exerciseGroup"
     [isAssessor]="isAssessor"
     [isAtLeastInstructor]="isAtLeastInstructor"
     [canOverride]="canOverride"
