Add translation and submission id condition

--- a/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
+++ b/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
@@ -233,6 +233,7 @@
                     <thead>
                         <tr>
                             <th>#</th>
+                            <th *ngIf="!!exercise.exerciseGroup">{{ 'artemisApp.tutorExerciseDashboard.submissionId' | translate }}</th>
                             <th>{{ 'artemisApp.tutorExerciseDashboard.submissionDate' | translate }}</th>
                             <th>{{ 'artemisApp.tutorExerciseDashboard.result' | translate }}</th>
                             <th>{{ 'artemisApp.tutorExerciseDashboard.status' | translate }}</th>
@@ -244,6 +245,7 @@
                     <tbody>
                         <tr *ngFor="let submission of assessedSubmissions; let i = index">
                             <td>{{ i + 1 }}</td>
+                            <td *ngIf="!!exercise.exerciseGroup">{{ submission.id }}</td>
                             <td>{{ submission.submissionDate | artemisDate }}</td>
                             <td>
                                 <jhi-result [participation]="submission.participation"></jhi-result>
@@ -332,17 +334,17 @@
             <!-- Start all assessed submissions only for exam mode -->
             <div *ngIf="!!exercise.exerciseGroup && (tutorParticipationStatus === TRAINED || tutorParticipationStatus === COMPLETED)">
                 <h4>
-                    Submissions for 2nd review:
+                    {{ 'artemisApp.tutorExerciseDashboard.othersAssessments' | translate }}
                 </h4>
                 <div class="table-responsive">
                     <table class="table table-striped exercise-table" *ngIf="otherAssessedSubmissions.length > 0; else noSubmissions">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>ID</th>
+                                <th>{{ 'artemisApp.tutorExerciseDashboard.submissionId' | translate }}</th>
                                 <th>{{ 'artemisApp.tutorExerciseDashboard.submissionDate' | translate }}</th>
                                 <th>{{ 'artemisApp.tutorExerciseDashboard.result' | translate }}</th>
-                                <th>Assessor</th>
+                                <th>{{ 'artemisApp.tutorExerciseDashboard.assessor' | translate }}</th>
                                 <th>{{ 'artemisApp.tutorExerciseDashboard.score' | translate }}</th>
                                 <th *ngIf="exercise.type === ExerciseType.TEXT">{{ 'artemisApp.tutorExerciseDashboard.language' | translate }}</th>
                                 <th>{{ 'artemisApp.tutorExerciseDashboard.action' | translate }}</th>
