--- a/src/main/webapp/app/exercises/file-upload/assess/file-upload-assessment.component.html
+++ b/src/main/webapp/app/exercises/file-upload/assess/file-upload-assessment.component.html
@@ -2,7 +2,7 @@
     (navigateBack)="navigateBack()"
     [isLoading]="isLoading"
     [isTeamMode]="exercise?.teamMode"
-    [isExamMode]="!!exercise?.exerciseGroup"
+    [isExamMode]="isExamMode"
     [isAssessor]="isAssessor"
     [isAtLeastInstructor]="isAtLeastInstructor"
     [canOverride]="canOverride"
