--- a/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
+++ b/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
@@ -354,7 +354,7 @@
                                     <fa-icon [icon]="'sort'"></fa-icon>
                                 </th>
                                 <th jhiSortBy="name">
-                                    a class="th-link">{{ 'artemisApp.tutorExerciseDashboard.assessor' | translate }}</a>
+                                    <a class="th-link">{{ 'artemisApp.tutorExerciseDashboard.assessor' | translate }}</a>
                                     <fa-icon [icon]="'sort'"></fa-icon>
                                 </th>
                                 <th jhiSortBy="score">
