--- a/src/main/webapp/app/assessment/assessment-header/assessment-header.component.html
+++ b/src/main/webapp/app/assessment/assessment-header/assessment-header.component.html
@@ -8,7 +8,7 @@
     <div class="row-container" *ngIf="!isLoading">
         <span
             id="assessmentLocked"
-            *ngIf="!isAssessor && !isComplaint && isExamMode"
+            *ngIf="!isAssessor && !isComplaint && !isExamMode"
             class="text-danger ml-3"
             style="font-size: 65%;"
             jhiTranslate="artemisApp.assessment.assessmentLocked"
@@ -18,13 +18,13 @@
         </span>
         <span
             id="secondCorrection"
-            *ngIf="!isAssessor && !isComplaint && !isExamMode"
+            *ngIf="!isAssessor && !isComplaint && isExamMode"
             class="text-info ml-3"
             style="font-size: 65%;"
             jhiTranslate="artemisApp.assessment.firstCorrectionBy"
             [translateValues]="{ otherUser: result?.assessor?.name + ' (' + result?.assessor?.login + ')' }"
         >
-            First correction by: otherUser
+            Last corrected by: otherUser
         </span>
         <span
             *ngIf="!isAssessor && isComplaint"
