--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -1,17 +1,17 @@
-<div class="container">
+<div class="container d-flex flex-column align-items-center justify-content-center">
     <h2 style="text-align: center;">
         <span>{{ 'artemisApp.examParticipation.greeting' | translate: { title: exam.title, fullName: accountName } }}</span>
     </h2>
     <div><span style="display: table; margin-left: auto; margin-right: auto;" [innerHTML]="formattedGeneralInformation"></span></div>
-    <div style="text-align: center;">
-        <label for="confirmBox"><span [innerHTML]="formattedConfirmationText"></span></label>
-        <input [(ngModel)]="confirmed" type="checkbox" id="confirmBox" (click)="updateConfirmation()" />
+    <div class="d-flex align-items-center justify-content-center">
+        <input [(ngModel)]="confirmed" type="checkbox" id="confirmBox" (click)="updateConfirmation()" style="place-self: flex-start;" class="mt-1" />
+        <span id="formatted-confirmation-text" class="d-inline-block ml-2" [innerHTML]="formattedConfirmationText"></span>
     </div>
-    <div *ngIf="startView" style="text-align: center;">
+    <div class="mt-4" style="text-align: center;">
         <div class="login-form">
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <label class="font-weight-bold" for="fullname" jhiTranslate="artemisApp.exam.consentText"></label>
+                    <label class="font-weight-bold" for="fullname" jhiTranslate="{{ startView ? 'artemisApp.exam.startConsentText' : 'artemisApp.exam.endConsentText' }}"></label>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -24,7 +24,7 @@
                         placeholder="Name"
                         [(ngModel)]="enteredName"
                         [ngModelOptions]="{ updateOn: 'change' }"
-                        [disabled]="waitingForExamStart"
+                        [disabled]="startView ? waitingForExamStart : false"
                     />
                 </div>
             </div>
@@ -36,9 +36,16 @@
                 </div>
             </div>
         </div>
-        <button [disabled]="!startButtonEnabled" type="submit" (click)="startExam()" class="btn btn-primary" id="startExamBtn">
-            <span jhiTranslate="artemisApp.exam.startExam">Start Exam</span>
-        </button>
+        <ng-container #startButton *ngIf="startView; else endButton">
+            <button [disabled]="!startButtonEnabled" type="submit" (click)="startExam()" class="btn btn-primary">
+                <span jhiTranslate="artemisApp.exam.startExam">Start Exam</span>
+            </button>
+        </ng-container>
+        <ng-template #endButton>
+            <button [disabled]="!endButtonEnabled" type="submit" (click)="submitExam()" class="btn btn-primary">
+                <span jhiTranslate="artemisApp.exam.endExam">End Exam</span>
+            </button>
+        </ng-template>
     </div>
     <div class="exam-waiting-for-start-overlay alert alert-info" *ngIf="waitingForExamStart">
         <span>{{ 'artemisApp.examParticipation.waitForStart' | translate: { title: exam.title } }}</span>
@@ -49,10 +56,5 @@
             <br />
             <span>({{ formattedStartDate }})</span>
         </div>
-    </div>
-    <div *ngIf="!startView" style="text-align: center;">
-        <button [disabled]="!confirmed" type="submit" (click)="submit()" class="btn btn-primary" id="summaryBtn">
-            <span jhiTranslate="artemisApp.exam.summary">Summary</span>
-        </button>
     </div>
 </div>
