--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.scss
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.scss
@@ -14,3 +14,7 @@
     border-color: #3c763d;
     z-index: 8;
 }
+
+:host ::ng-deep #formatted-confirmation-text p {
+    margin-bottom: 0 !important;
+}
