--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -3,11 +3,11 @@
         <span>{{ 'artemisApp.examParticipation.greeting' | translate: { title: exam.title, fullName: accountName } }}</span>
     </h2>
     <div><span style="display: table; margin-left: auto; margin-right: auto;" [innerHTML]="formattedGeneralInformation"></span></div>
-    <div class="d-flex align-items-center justify-content-center">
+    <div class="d-flex justify-content-center">
         <input [(ngModel)]="confirmed" type="checkbox" id="confirmBox" (click)="updateConfirmation()" style="place-self: flex-start;" class="mt-1" />
         <span id="formatted-confirmation-text" class="d-inline-block ml-2" [innerHTML]="formattedConfirmationText"></span>
     </div>
-    <div class="mt-3" style="text-align: center;">
+    <div style="text-align: center;">
         <div class="login-form">
             <div class="row justify-content-center">
                 <div class="col-md-6">
