--- a/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
+++ b/src/main/webapp/app/exercises/shared/dashboards/tutor/tutor-exercise-dashboard.component.html
@@ -238,6 +238,7 @@
                             <th>{{ 'artemisApp.tutorExerciseDashboard.result' | translate }}</th>
                             <th>{{ 'artemisApp.tutorExerciseDashboard.status' | translate }}</th>
                             <th>{{ 'artemisApp.tutorExerciseDashboard.score' | translate }}</th>
+                            <th *ngIf="exercise.exerciseGroup">{{ 'artemisApp.tutorExerciseDashboard.assessedTwice' | translate }}</th>
                             <th *ngIf="exercise.type === ExerciseType.TEXT">{{ 'artemisApp.tutorExerciseDashboard.language' | translate }}</th>
                             <th>{{ 'artemisApp.tutorExerciseDashboard.action' | translate }}</th>
                         </tr>
@@ -255,6 +256,9 @@
                             </td>
                             <td>
                                 <span *ngIf="submission.result !== null && submission.result.score !== null">{{ submission.result.score }} %</span>
+                            </td>
+                            <td>
+                                <fa-icon *ngIf="submission.result.isAssessedTwice" [icon]="'check'"></fa-icon>
                             </td>
                             <td *ngIf="exercise.type === ExerciseType.TEXT">
                                 {{ 'artemisApp.tutorExerciseDashboard.languages.' + (submission.language ? submission.language : 'UNKNOWN') | translate }}
